<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_paginas_produtos"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/por_o_de_batata_fritas"
        android:textAlignment="center"
        android:textSize="@dimen/tamanho_titulo_prods"/>

    <ImageView
        android:layout_width="@dimen/largura_imagem_produto"
        android:layout_height="@dimen/altura_imagem_produto"
        android:src="@drawable/fritas"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margem_top_prods"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_o_r_12_90"
        android:textAlignment="center"
        android:textSize="@dimen/tamanho_titulo_prods"
        android:layout_marginTop="@dimen/margem_top_prods"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descri_o_por_o_de_batata_frita_de_300_gramas_as_batatas_mais_gostosas_do_mundo"
        android:textAlignment="center"
        android:textSize="@dimen/tamanho_titulo_prods"
        android:layout_marginTop="@dimen/margem_top_prods"/>

</LinearLayout>
