<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_paginas_produtos"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_legend_burguer"
        android:textAlignment="center"
        android:textSize="@dimen/tamanho_titulo_prods"/>

    <ImageView
        android:layout_width="@dimen/largura_imagem_produto"
        android:layout_height="@dimen/altura_imagem_produto"
        android:src="@drawable/legend"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margem_top_prods"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_25_90"
        android:textAlignment="center"
        android:textSize="@dimen/tamanho_titulo_prods"
        android:layout_marginTop="@dimen/margem_top_prods"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/o_nosso_maior_hamburguer_dois_hamburguers_de_picanha_de_200_gramas_alface_tomate_queijo_cheddar_e_nosso_molho_especial"
        android:textAlignment="center"
        android:textSize="@dimen/tamanho_titulo_prods"
        android:layout_marginTop="@dimen/margem_top_prods"/>

</LinearLayout>
